Update PostgresSQL Spans script to include server-side traces.
Signed-off-by: Hannah Troisi <htroisi@pixielabs.ai>

--- a/plugins/new-relic/retention.yaml
+++ b/plugins/new-relic/retention.yaml
@@ -259,30 +259,65 @@ presetScripts:
       )
     defaultFrequencyS: 10
   - name: "PostgreSQL Spans"
-    description: "This script generates span events from queries to PostgreSQL databases and send them to New Relic's OTel endpoint."
+    description: "This script generates span events from queries to PostgreSQL databases and sends them to New Relic's OTel endpoint."
     script: |
       #px:set max_output_rows_per_table=500
 
       import px
 
-      df = px.DataFrame('pgsql_events', start_time=px.plugin.start_time, end_time=px.plugin.end_time)
+      def add_source_dest_columns(df):
+          df.pod = df.ctx['pod']
+          df.namespace = df.ctx['namespace']
 
-      ns_prefix = df.ctx['namespace'] + '/'
-      df.container = df.ctx['container_name']
-      df.pod = px.strip_prefix(ns_prefix, df.ctx['pod'])
-      df.service = px.strip_prefix(ns_prefix, df.ctx['service'])
-      df.namespace = df.ctx['namespace']
+          # If remote_addr is a pod, get its name. If not, use IP address.
+          df.ra_pod = px.pod_id_to_pod_name(px.ip_to_pod_id(df.remote_addr))
+          df.is_ra_pod = df.ra_pod != ''
+          df.ra_name = px.select(df.is_ra_pod, df.ra_pod, df.remote_addr)
+
+          df.is_server_tracing = df.trace_role == 2
+          df.is_source_pod_type = px.select(df.is_server_tracing, df.is_ra_pod, True)
+          df.is_dest_pod_type = px.select(df.is_server_tracing, True, df.is_ra_pod)
+
+          # Set client and server based on trace_role.
+          df.source_pod = px.select(df.is_server_tracing, df.ra_name, df.pod)
+          df.destination_pod = px.select(df.is_server_tracing, df.pod, df.ra_name)
+
+          df = df.drop(['ra_pod', 'is_ra_pod', 'ra_name', 'is_server_tracing'])
+          df.source_service = px.pod_name_to_service_name(df.source_pod)
+          df.destination_service = px.pod_name_to_service_name(df.destination_pod)
+          # If the destination service is missing then try the nslookup
+          df.destination_service = px.select(
+              df.destination_service != '',
+              df.destination_service,
+              px.nslookup(df.remote_addr),
+          )
+          # If the destination service is still missing then set the remote_addr
+          df.destination_service = px.select(
+              df.destination_service != '',
+              df.destination_service,
+              df.remote_addr,
+          )
+          return df
+
+      df = px.DataFrame('pgsql_events', start_time=px.plugin.start_time, end_time=px.plugin.end_time)
+      df = add_source_dest_columns(df)
+
+      df.source_namespace = px.pod_name_to_namespace(df.source_pod)
+      ns_prefix = df.source_namespace + '/'
+      df.source_pod = px.strip_prefix(ns_prefix, df.source_pod)
+      df.source_service = px.strip_prefix(ns_prefix, df.source_service)
+
+      df.destination_namespace = px.pod_name_to_namespace(df.destination_pod)
+      ns_prefix = df.destination_namespace + '/'
+      df.destination_pod = px.strip_prefix(ns_prefix, df.destination_pod)
+      df.destination_service = px.strip_prefix(ns_prefix, df.destination_service)
 
       df.normed_query_struct = px.normalize_pgsql(df.req, df.req_cmd)
       df.query = px.pluck(df.normed_query_struct, 'query')
-
       df = df[df.query != ""]
-      df = df[df.trace_role == 1]
 
       df.start_time = df.time_
       df.end_time = df.time_ + df.latency
-
-      df = df[['start_time', 'end_time', 'container', 'service', 'pod', 'namespace', 'query', 'latency']]
 
       df.cluster_name = px.vizier_name()
       df.cluster_id = px.vizier_id()
@@ -292,13 +327,14 @@ presetScripts:
       px.export(
         df, px.otel.Data(
           resource={
-            'service.name': df.service,
-            'k8s.container.name': df.container,
-            'service.instance.id': df.pod,
-            'k8s.pod.name': df.pod,
-            'k8s.namespace.name': df.namespace,
-            'px.cluster.id': df.cluster_id,
+            'service.name': df.source_service,
+            'service.instance.id': df.source_pod,
+            'k8s.namespace.name': df.source_namespace,
+            'postgres.service.name': df.destination_service,
+            'postgres.pod.name': df.destination_pod,
+            'postgres.namespace.name': df.destination_namespace,
             'k8s.cluster.name': df.cluster_name,
+            'pixie.cluster.id': df.cluster_id,
             'instrumentation.provider': df.pixie,
           },
           data=[
@@ -316,7 +352,7 @@ presetScripts:
       )
     defaultFrequencyS: 10
   - name: "MySQL Spans"
-    description: "This script generates span events from queries to MySQL databases and send them to New Relic's OTel endpoint."
+    description: "This script generates span events from queries to MySQL databases and sends them to New Relic's OTel endpoint."
     script: |
       #px:set max_output_rows_per_table=500
 
