Standardize pixie_cluster_id attribute name.
Signed-off-by: Hannah Troisi <htroisi@pixielabs.ai>

--- a/plugins/new-relic/retention.yaml
+++ b/plugins/new-relic/retention.yaml
@@ -45,7 +45,7 @@ presetScripts:
             'service.instance.id': df.pod,
             'k8s.pod.name': df.pod,
             'k8s.namespace.name': df.namespace,
-            'px.cluster.id': df.cluster_id,
+            'pixie.cluster.id': df.cluster_id,
             'k8s.cluster.name': df.cluster_name,
             'instrumentation.provider': df.pixie,
           },
@@ -209,7 +209,7 @@ presetScripts:
             'service.instance.id': df.pod,
             'k8s.pod.name': df.pod,
             'k8s.namespace.name': df.namespace,
-            'px.cluster.id': df.cluster_id,
+            'pixie.cluster.id': df.cluster_id,
             'k8s.cluster.name': df.cluster_name,
             'instrumentation.provider': df.pixie,
           },
