undo px.cluster.id change
Signed-off-by: Phillip Kuznetsov <pkuznetsov@pixielabs.ai>

--- a/plugins/new-relic/retention.yaml
+++ b/plugins/new-relic/retention.yaml
@@ -571,7 +571,7 @@ presetScripts:
                   'k8s.pod.name': otel_df.source_pod,
                   'k8s.namespace.name': otel_df.source_namespace,
                   'k8s.cluster.name': otel_df.cluster_name,
-                  'pixie.cluster.id': otel_df.cluster_id,
+                  'px.cluster.id': otel_df.cluster_id,
                   'instrumentation.provider': otel_df.pixie,
                   'kafka.service.name': otel_df.destination_service,
                   'kafka.broker.pod': otel_df.destination_pod,
@@ -784,7 +784,7 @@ presetScripts:
                   'k8s.pod.name': df.source_pod,
                   'k8s.namespace.name': df.source_namespace,
                   'k8s.cluster.name': df.cluster_name,
-                  'pixie.cluster.id': df.cluster_id,
+                  'px.cluster.id': df.cluster_id,
                   'instrumentation.provider': df.pixie,
                   'kafka.service.name': df.destination_service,
                   'kafka.broker.pod': df.destination_pod,
