--- a/plugins/new-relic/retention.yaml
+++ b/plugins/new-relic/retention.yaml
@@ -573,10 +573,12 @@ presetScripts:
               kind=px.otel.trace.SPAN_KIND_CLIENT,
               attributes={
                 'mysql.req_cmd': df.req_cmd,
+                'mysql.req_body': df.req_body,
                 'mysql.req_bytes': df.req_bytes,
                 'mysql.resp_bytes': df.resp_bytes,
                 'mysql.resp_latency': df.latency,
                 'mysql.resp_status': df.resp_status,
+                'mysql.resp_body': df.resp_body,
                 'db.system': df.db_system,
               },
             ),
