Switch from otel_df to df in kafka scripts
Signed-off-by: Phillip Kuznetsov <pkuznetsov@pixielabs.ai>

--- a/plugins/new-relic/retention.yaml
+++ b/plugins/new-relic/retention.yaml
@@ -561,43 +561,42 @@ presetScripts:
       df.cluster_name = px.vizier_name()
       df.req_cmd = px.kafka_api_key_name(df.req_cmd)
 
-      otel_df = df
       px.export(
-          otel_df,
+          df,
           px.otel.Data(
               resource={
-                  'service.name': otel_df.source_service,
-                  'service.instance.id': otel_df.source_pod,
-                  'k8s.pod.name': otel_df.source_pod,
-                  'k8s.namespace.name': otel_df.source_namespace,
-                  'k8s.cluster.name': otel_df.cluster_name,
-                  'px.cluster.id': otel_df.cluster_id,
-                  'instrumentation.provider': otel_df.pixie,
-                  'kafka.service.name': otel_df.destination_service,
-                  'kafka.broker.pod': otel_df.destination_pod,
-                  'kafka.namespace.name': otel_df.destination_namespace,
-                  'kafka.client_id': otel_df.client_id,
-                  'kafka.has_error': otel_df.has_error,
-                  'kafka.partition_idx': otel_df.partition_idx,
-                  'kafka.req_cmd': otel_df.req_cmd,
-                  'kafka.topic_name': otel_df.topic_name,
+                  'service.name': df.source_service,
+                  'service.instance.id': df.source_pod,
+                  'k8s.pod.name': df.source_pod,
+                  'k8s.namespace.name': df.source_namespace,
+                  'k8s.cluster.name': df.cluster_name,
+                  'px.cluster.id': df.cluster_id,
+                  'instrumentation.provider': df.pixie,
+                  'kafka.service.name': df.destination_service,
+                  'kafka.broker.pod': df.destination_pod,
+                  'kafka.namespace.name': df.destination_namespace,
+                  'kafka.client_id': df.client_id,
+                  'kafka.has_error': df.has_error,
+                  'kafka.partition_idx': df.partition_idx,
+                  'kafka.req_cmd': df.req_cmd,
+                  'kafka.topic_name': df.topic_name,
               },
               data=[
                   px.otel.metric.Summary(
                       name='kafka.latency',
                       description='Summary of latency for Kafka requests',
-                      count=otel_df.latency_count,
-                      sum=otel_df.latency_sum,
+                      count=df.latency_count,
+                      sum=df.latency_sum,
                       unit='ms',
                       quantile_values={
-                          0.0: otel_df.latency_min,
-                          1.0: otel_df.latency_max,
+                          0.0: df.latency_min,
+                          1.0: df.latency_max,
                       },
                   ),
                   px.otel.metric.Gauge(
                       name='kafka.bytes',
                       description='The total number of bytes sent or received through Kafka requests',
-                      value=otel_df.record_bytes_total,
+                      value=df.record_bytes_total,
                   ),
               ],
           ),
